--- a/style.css
+++ b/style.css
@@ -197,21 +197,41 @@ textarea {
     .paragrafo {
         display: none;
     }
-
+.titulo {
+    display: none;
+    
+}
     .caixa-mae {
     flex-direction: column;
     padding: 10px;
+    width: 100%;
+    height: 50%;
 }
 
 .caixa-principal {
     display: flex;
     align-items: center;
     flex-direction: column;
+    width: 100vw;
+    height: 50vh;
 }
 
 .mario {
-    width: 80vw;
+    width: 60vw;
     height: auto;
 }
 
+.logo {
+    width: 200px;
+}
+.heard{
+    display: none;
+}
+.link-zap {
+    display: none;
+}
+main {
+    width: 100vw;
+    height: 100vh;
+}
 }
