--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .logo {
-    height: 200px;
+    height: 150px;
 }
 
 button {
@@ -28,16 +29,16 @@ button {
     background-color: white;
 }
 .mario {
-    height: 500px;
+    height: 400px;
 }
 
 .caixa-mae {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 100px;
-    height: 80vh;
-    margin-top: -60px;
+    padding: 20px;
+    height: 70vh;
+    margin-top: -20px;
 }
 
 body {
@@ -52,12 +53,13 @@ body {
     position: fixed;
     top: 0;
     z-index: -1;
-    min-width: 100%;
+    width: 100vw;
     min-height: 100%;
 }
 
 .video {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 .mascara {
@@ -69,19 +71,19 @@ body {
 }
 .titulo {
     color: white;
-    font-size: 30px;
+    font-size: 25px;
 
 }
 .paragrafo {
     color: white;
-    font-size: 20px;
+    font-size: 15px;
+    line-height: 20px;
 }
 
 .link-zap {
     height: 60px;
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
+    position: relative;
+    margin: -20px 0 0 1250px;
 }
 
 .heard {
@@ -196,20 +198,22 @@ textarea {
 
 @media(max-width: 1100px){
 
-    .paragrafo {
-        display: none;
+.paragrafo {
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 25px;
+    line-height: 30px;
     }
 .titulo {
     display: none;
     
 }
-    .caixa-mae {
+.caixa-mae {
     flex-direction: column;
-    padding: 10px;
+    padding: 20px;
     width: 100%;
     height: 50%;
 }
-
 .caixa-principal {
     display: flex;
     align-items: center;
@@ -219,21 +223,95 @@ textarea {
 }
 
 .mario {
-    width: 60vw;
-    height: auto;
+    width: 40vw;
+    height: 40vh;
+    margin-top: 750px;
+    position: absolute;   
 }
 
 .logo {
     width: 200px;
 }
-.heard{
-    display: none;
-}
+
 .link-zap {
-    display: none;
+    margin: 100px 0 0 200px;
+    width: 70px
 }
 main {
     width: 100vw;
     height: 100vh;
 }
+}
+@media(max-width: 550px){
+    .logo{
+        width: 120px;
+    }
+    .caixa-mae{
+        margin-top: -50px;
+    }
+    .paragrafo{
+        font-size: 20px;
+        line-height: 18px;
+        padding-bottom: 10px;
+    }
+    .mario{
+        width: 150px;
+        margin-top: 640px;
+    }
+    .link-zap{
+        margin: 150px 0 0px 50px
+    }
+}
+@media(max-width: 440px){
+    .logo{
+        width: 150px;
+    }
+    .paragrafo{
+        font-size: 18px;
+    }
+    .mario{
+        width: 200px;
+        margin-top: 750px;
+}
+.caixa-mae{
+    margin-top: -30px;
+}
+.link-zap{
+    margin-left: 30px;
+}
+.serviços-mae{
+    width: 80vw;
+    height: 50vh;
+    margin-left: -200px;
+}
+.fale-conosco{
+    margin-left: 40px;
+}
+}
+@media(max-width: 380px){
+    .paragrafo{
+        font-size: 14px;
+        padding-bottom: 20px;
+    }
+    .logo{
+        width: 100px;
+    }
+    .mario{
+        width: 130px;
+        margin: 520px 0 0 200px;
+    }
+    
+    .link-zap{
+        margin: 80px 0 0 40px;
+    }
+}
+@media(max-width: 365px){
+    .mario{
+        margin: 610px 0 0 200px;
+    }
+}
+@media(max-width: 348px){
+    .mario{
+        margin: 700px 0 0 30px;
+    }
 }
